--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Terraform Format and validate
         run: |
+         terraform fmt
          terraform fmt -check
          terraform init
          terraform validate
